Scrollbar-fix

--- a/src/app/features/board/board.responsive.scss
+++ b/src/app/features/board/board.responsive.scss
@@ -76,7 +76,7 @@
     /* Firefox */
     -ms-overflow-style: none;
     /* IE & alter Edge */
-    overflow: hidden !important;
+    overflow: hidden;
   }
 
   /* Chrome, Safari, neuer Edge */
@@ -288,15 +288,13 @@
   }
 
   #header-left {
+    box-sizing: border-box;
     display: flex;
     position: absolute;
     top: 200px;
-    margin: 0 auto;
-    margin-left: 50px;
-    width: 100%;
+    width: calc(100% - 50px);
     max-width: 700px;
     min-width: 100px;
-    padding: 0 10px;
     align-items: center;
     height: 70px;
   }
@@ -305,9 +303,10 @@
     width: 100%;
     top: 120px;
     margin: 0 auto;
-    height: auto !important;
+    height: auto;
     min-height: 100vh;
-    overflow: visible !important;
+    overflow: visible;
+    overflow-x: hidden;
   }
 
   .example-list {
@@ -417,8 +416,9 @@
   }
 
   .empty-list {
-    width: 600px !important;
+    width: 100% !important;
     margin: 0 auto;
+    padding: 0 10px;
   }
 
   h1 {
